<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_fondo"
    android:clickable="true"
    android:onClick="checkAndHideKeyboard"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/registrarse"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="262dp"
        android:layout_height="156dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/box_register"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <EditText
            android:id="@+id/et_user"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/user"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/pass"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </LinearLayout>

    <Spinner
        android:id="@+id/sp_countries"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:entries="@array/country_arrays" />

    <CheckBox
        android:id="@+id/cb_sex"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_below="@+id/sp_countries"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:button="@drawable/chk_sex"
        android:checked="true" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_sex"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="register"
        android:text="@string/registrarse_shrt" />

</RelativeLayout>