<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_fondo"
    android:clickable="true"
    android:onClick="checkAndHideKeyboard"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="262dp"
        android:layout_height="104dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/login_box"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <EditText
            android:id="@+id/login_user"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/pass"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn_entrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="login"
        android:text="@string/ingresar" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="loginfb"
        android:background="@drawable/login_fb_btn"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="recuperarPass"
            android:text="@string/recuperar_pass" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="registra"
            android:text="@string/registrarse" />
    </LinearLayout>

</RelativeLayout>