<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_fondo"
    android:clickable="true"
    android:onClick="checkAndHideKeyboard"
    android:orientation="vertical" >



    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/recuperar_pass"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="262dp"
        android:layout_height="52dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/box_field"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <EditText
            android:id="@+id/et_email_to_recover"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/tu_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn_entrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:onClick="recoverEmail"
        android:text="@string/enviar" />

    <ProgressBar
        android:id="@+id/pb_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn_entrar"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="20dp" />

</RelativeLayout>