<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/login_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_fondo"
        android:clickable="true"
        android:onClick="checkAndHideKeyboard"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="262dp"
            android:layout_height="104dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_box"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="262dp"
            android:layout_height="104dp"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_box"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <EditText
                android:id="@+id/et_old_pass"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/old_pass"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:ems="10"
                android:hint="@string/new_pass"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </LinearLayout>

        <Spinner
            android:id="@+id/sp_countries"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:entries="@array/country_arrays" />

        <CheckBox
            android:id="@+id/cb_sex"
            android:layout_width="260dp"
            android:layout_height="44dp"
            android:layout_below="@+id/sp_countries"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:button="@drawable/chk_sex"
            android:checked="true" />

        <LinearLayout
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cb_sex"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_profile_avatar"
                android:contentDescription="@null"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/image_profile" />

            <ImageButton
                android:id="@+id/btn_photo"
                android:layout_width="65dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:onClick="getPhoto"
                android:src="@drawable/bt_camera" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_update"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="update"
            android:text="@string/actualizar" />
    </RelativeLayout>

</ScrollView>